H000_Noop gate: drive mainGameLoop directly, resolve log to repo root
Running match.startGame(game) after state.applyToGame(game) throws
"Turns already started" because applyToGame's devModeSet already set
the phase and startGame's setupFirstTurn refuses to re-initialise.
For fixture-loaded games the correct path is: applyToGame (sets phase,
zones, triggers, state effects), then setAge(Play), then drive
mainGameLoop directly. Skips prepareAllZones + mulligans, which would
fight the fixture's pre-set library/hand.

HypothesisLog now resolves .claude/notes/<branch>/ against the git
root (marker: .git) rather than surefire's module-scoped cwd, so the
single aggregated hypotheses.jsonl lands at the repo root regardless
of which module invoked the test.

H000_Noop is a no-op variant — the end-to-end gate. With these two
fixes the first full run on empty-board-commander captured 1535
decisions, 0 divergences, verdict PASS (JIT noise).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>